--- a/addons/twh_racing_part/report/invoice_report_template.xml
+++ b/addons/twh_racing_part/report/invoice_report_template.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <!-- Invoice Report Template -->
-   <template id="report_twh_invoice_document">
+    <!-- ========================================
+         INVOICE REPORT TEMPLATE
+         Template untuk cetak invoice TWH ke PDF
+         ======================================== -->
+
+    <template id="report_twh_invoice_document">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <div class="page">
+                        
                         <!-- Header -->
                         <div class="row">
                             <div class="col-6">
@@ -15,8 +20,8 @@
                             <div class="col-6 text-end">
                                 <h3><span t-field="o.name"/></h3>
                                 <p>
-                                    <strong>Date:</strong> <span t-field="o.date_invoice"/><br/>
-                                    <strong>Due Date:</strong> <span t-field="o.date_due"/><br/>
+                                    <strong>Tanggal:</strong> <span t-field="o.date_invoice"/><br/>
+                                    <strong>Jatuh Tempo:</strong> <span t-field="o.date_due"/><br/>
                                     <strong>Sales:</strong> <span t-field="o.sales_person_id.name"/>
                                 </p>
                             </div>
@@ -24,18 +29,18 @@
 
                         <hr/>
 
-                        <!-- Customer Info -->
+                        <!-- Customer Information -->
                         <div class="row mt-4">
                             <div class="col-6">
-                                <strong>Bill To:</strong><br/>
+                                <strong>Kepada:</strong><br/>
                                 <span t-field="o.partner_id.name"/><br/>
                                 <span t-field="o.partner_id.street"/><br/>
                                 <span t-field="o.partner_id.city"/><br/>
-                                Phone: <span t-field="o.partner_id.phone"/>
+                                Telp: <span t-field="o.partner_id.phone"/>
                             </div>
                             <div class="col-6 text-end">
                                 <p>
-                                    <strong>Price Tier:</strong> 
+                                    <strong>Kategori Harga:</strong> 
                                     <t t-if="o.price_tier == 'price_a'">Harga A</t>
                                     <t t-elif="o.price_tier == 'price_b'">Harga B</t>
                                     <t t-elif="o.price_tier == 'dealer'">Dealer</t>
@@ -44,14 +49,14 @@
                             </div>
                         </div>
 
-                        <!-- Invoice Lines - UPDATED SECTION -->
+                        <!-- Invoice Lines Table -->
                         <table class="table table-sm mt-4">
                             <thead>
                                 <tr style="background-color: #e9ecef;">
                                     <th style="width: 5%;">No</th>
-                                    <th style="width: 45%;">Product Description</th>
+                                    <th style="width: 45%;">Deskripsi Produk</th>
                                     <th class="text-center" style="width: 10%;">Qty</th>
-                                    <th class="text-end" style="width: 15%;">Unit Price</th>
+                                    <th class="text-end" style="width: 15%;">Harga Satuan</th>
                                     <th class="text-end" style="width: 15%;">Subtotal</th>
                                 </tr>
                             </thead>
@@ -61,16 +66,17 @@
                                     <t t-set="line_num" t-value="line_num + 1"/>
                                     <td><span t-esc="line_num"/></td>
                                     <td>
-                                        <!-- CRITICAL: Tampilkan description jika ada, kalau tidak tampilkan product name -->
+                                        <!-- Tampilkan description jika ada, kalau tidak tampilkan product name -->
                                         <t t-if="line.description and line.description.strip() != '' and line.description != line.product_id.name">
                                             <strong><span t-esc="line.description"/></strong>
                                         </t>
                                         <t t-else="">
                                             <strong><span t-field="line.product_id.name"/></strong>
                                         </t>
-                                        <!-- Product code (opsional) -->
+                                        
+                                        <!-- Product code (optional) -->
                                         <div style="font-size: 9pt; color: #666;">
-                                            Code: <span t-field="line.product_id.default_code"/>
+                                            Kode: <span t-field="line.product_id.default_code"/>
                                         </div>
                                     </td>
                                     <td class="text-center">
@@ -88,11 +94,12 @@
                             </tbody>
                         </table>
 
-                        <!-- Totals -->
+                        <!-- Totals Section -->
                         <div class="row">
                             <div class="col-7"></div>
                             <div class="col-5">
                                 <table class="table table-sm">
+                                    <!-- Subtotal -->
                                     <tr>
                                         <td><strong>Subtotal:</strong></td>
                                         <td class="text-end">
@@ -100,13 +107,17 @@
                                                   t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                         </td>
                                     </tr>
+                                    
+                                    <!-- Discount (jika ada) -->
                                     <tr t-if="o.discount_percent &gt; 0">
-                                        <td><strong>Discount (<span t-field="o.discount_percent"/>%):</strong></td>
+                                        <td><strong>Diskon (<span t-field="o.discount_percent"/>%):</strong></td>
                                         <td class="text-end">
                                             <span t-field="o.discount_amount" 
                                                   t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                         </td>
                                     </tr>
+                                    
+                                    <!-- Total -->
                                     <tr style="border-top: 2px solid black;">
                                         <td><strong>TOTAL:</strong></td>
                                         <td class="text-end">
@@ -120,10 +131,10 @@
                             </div>
                         </div>
 
-                        <!-- Notes -->
+                        <!-- Notes Section (jika ada) -->
                         <div class="row mt-4" t-if="o.notes">
                             <div class="col-12">
-                                <strong>Notes:</strong><br/>
+                                <strong>Catatan:</strong><br/>
                                 <span t-field="o.notes"/>
                             </div>
                         </div>
@@ -132,11 +143,12 @@
                         <div class="row mt-5">
                             <div class="col-12 text-center">
                                 <p style="font-size: 10pt;">
-                                    Thank you for your business!<br/>
-                                    Payment terms: <span t-field="o.payment_term_days"/> days from invoice date
+                                    Terima kasih atas kepercayaan Anda!<br/>
+                                    Termin pembayaran: <span t-field="o.payment_term_days"/> hari dari tanggal invoice
                                 </p>
                             </div>
                         </div>
+                        
                     </div>
                 </t>
             </t>
