--- a/addons/twh_racing_part/views/action_views.xml
+++ b/addons/twh_racing_part/views/action_views.xml
@@ -1,6 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <!-- ========================================
+         DASHBOARD VIEWS
+         Action untuk membuka dashboard client
+         ======================================== -->
+
     <record id="action_twh_dashboard" model="ir.actions.client">
-        <field name="name">TWH Dashboard</field>
+        <field name="name">Dashboard TWH</field>
         <field name="tag">twh_dashboard</field>
     </record>
-</odoo>
+
+</odoo> 
